refactory rest cep